<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sentrysoftware</groupId>
		<artifactId>oss-parent</artifactId>
		<version>2</version>
	</parent>

	<groupId>org.sentrysoftware</groupId>
	<artifactId>http</artifactId>
	<version>1.1.00-SNAPSHOT</version>

	<name>HTTP Java Client</name>
	<description>HTTP Client for Java</description>

	<organization>
		<name>Sentry Software</name>
		<url>https://sentrysoftware.com</url>
	</organization>

	<url>https://sentrysoftware.org/http</url>
	<inceptionYear>2023</inceptionYear>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/sentrysoftware/http/issues/</url>
	</issueManagement>

	<scm>
		<connection>scm:git:https://github.com/sentrysoftware/http.git</connection>
		<url>https://github.com/sentrysoftware/http</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Bertrand Martin (@bertysentry)</name>
			<email>bertrand@sentrysoftware.com</email>
			<roles>
				<role>maintainer</role>
			</roles>
		</developer>
		<developer>
			<name>Nassim Boutekedjiret (@NassimBtk)</name>
			<email>nassim@sentrysoftware.com</email>
			<roles>
				<role>maintainer</role>
			</roles>
		</developer>
		<developer>
			<name>Kawtar Bakour (@KawtarBK9)</name>
			<email>kawtar@sentrysoftware.com</email>
			<roles>
				<role>maintainer</role>
			</roles>
		</developer>
		<developer>
			<name>Elyes Cherfa (@CherfaElyes)</name>
			<email>elyes@sentrysoftware.com</email>
			<roles>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<!-- Java 8 & 17 -->
		<maven.compiler.release>17</maven.compiler.release>

		<!-- Reproducible Build -->
		<!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
		<project.build.outputTimestamp>2024-01-26T10:16:17Z</project.build.outputTimestamp>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.11.4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<!-- Common configuration for plugins -->
		<pluginManagement>
			<plugins>

				<!-- javadoc -->
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<detectJavaApiLink>false</detectJavaApiLink>
						<release>8</release>
						<show>public</show>
						<notimestamp>true</notimestamp>
						<failOnError>false</failOnError>
						<sourceFileIncludes>
							<include>org/sentrysoftware/http/HttpClient.java</include>
							<include>org/sentrysoftware/http/HttpResponse.java</include>
							<include>org/sentrysoftware/http/ProtocolOverridingSSLSocketFactory.java</include>
						</sourceFileIncludes>
						<sourcepath>${basedir}/src/main/java</sourcepath>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<!-- Actual build plugins -->
		<plugins>

			<!-- compiler -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<release>${null}<!-- keep empty to force target Java 8 --></release>
							<target>1.8</target>
						</configuration>
					</execution>
					<execution>
						<id>compile-java-21</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<release>17</release>
							<compileSourceRoots>
								<compileSourceRoot>${basedir}/src/main/java21</compileSourceRoot>
							</compileSourceRoots>
							<multiReleaseOutput>false</multiReleaseOutput>
							<outputDirectory>${project.build.outputDirectory}/META-INF/versions/21</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- surefire -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--add-exports java.base/sun.net.www.protocol.http=ALL-UNNAMED
						--add-exports java.base/sun.security.ssl=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<!-- jar -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Add-Opens>java.base/java.lang java.base/java.util java.base/sun.net.www.protocol.http java.base/sun.security.ssl</Add-Opens>
							<Multi-Release>true</Multi-Release>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>